--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
-  "dependencies": {
-    "bare-server-node": "github:tomphttp/bare-server-node",
-    "node-static": "^0.7.11"
-  }
+  "name": "your-project-name",
+  "version": "1.0.0",
+  "description": "A brief description of your project",
+  "main": "index.js",
+  "scripts": {
+    "build": "bundle exec jekyll build",
+    "serve": "bundle exec jekyll serve",
+    "deploy": "vercel --prod"
+  },
+  "author": "Your Name",
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {}
 }
